fixes vertical spacings between items on post lists

--- a/css/main.scss
+++ b/css/main.scss
@@ -197,7 +197,7 @@ body {
     -webkit-flex-direction: column;
     flex-direction: column;
 
-    padding: 3*$LIST-VERTICAL-SPACING 0;
+    padding: 2*$LIST-VERTICAL-SPACING 0;
 
     width: 100%;
     @include media-query(THREE) {
